<resources>
    <string name="app_name">Donation</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_name">Email</string>
    <string name="password">Senha</string>
    <string name="password_hint">******</string>
    <string name="forgot_your_login_info">Esqueceu sua Senha?</string>
    <string name="sign_in">Logar</string>
    <string name="remember_my_password">REMEMBER MY PASSWORD</string>
    <string name="username">E-mail</string>
    <string name="first_name">PRIMEIRO NOME</string>
    <string name="last_name">SOBRENOME</string>
    <string name="email">EMAIL</string>
    <string name="create_account">CRIAR CONTA</string>
    <string name="email_hint">teste@example.com</string>
    <string name="reset_senha">EVIAR EMAIL DE RECUPERAÇÃO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_minhas_doacoes">MinhasDoacoesActivity</string>
    <string name="title_activity_minhas_instituicoes">MinhasInstituicoesActivity</string>
    <string name="title_activity_instituicoes">Instituicoes</string>
    <string name="title_activity_lista_conta">ListaContaActivity</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_campanha">CampanhaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
